Fixed weird CSS text wrapping within tags in Chrome

--- a/styleguide/scss/core/_core-initialize.scss
+++ b/styleguide/scss/core/_core-initialize.scss
@@ -20,11 +20,6 @@
     -webkit-text-size-adjust: none;
     -webkit-font-size-adjust: none;
         
-    -moz-hyphens: none;
-    -ms-hyphens: none;
-    -webkit-hyphens: none;
-    hyphens: none;
-
     word-spacing: initial;
     letter-spacing: initial;
     word-break: break-word;
